# rust

./: .env  .gitignore  Cargo.toml  README.md  arb_bot_research_hinglish.md  env.example  note.txt  strategy.txt
abi/: uniswap_v2_pair.json  uniswap_v3_pool.json  universal_swap.json
cursor/: config.json
cursor/documentation/: 01_fetch_pairs.txt  02_flat_graph_builder.txt  03_reserve_cache.txt  04_price_tracker.txt  05_token_indexing.txt  06_simulate_swap_path.txt  07_route_finder.txt  08_safe_token_loader.txt  09_route_filtering.txt  10_executor.txt  11_latency_benchmarks.txt  12_core_affinity.txt  13_mempool_decoder.txt  14_rl_training.txt  15_pancakeswap_v2_router_analysis.md  full_project_documentation.txt
data/: factory_progress.json  liquid_pairs_v3.jsonl  pairs_v2 copy.jsonl  pairs_v3 copy.jsonl  pairs_v3_custom.jsonl  safe_tokens.json
scripts/: debug_liquidity.rs  debug_v3_liquidity.rs  filter_liquid_pairs.rs  filter_liquid_pairs_accurate.rs  filter_liquid_pairs_by_token_tax.py  filter_liquid_pairs_simple.rs  filter_liquid_pairs_v3.rs  filter_pairs.sh  filter_simulation_success_tokens.py  filter_zero_transfer_tax_tokens.py  quick-test.sh  run-bot.sh  test-bot.sh  test_liquidity_check.rs  test_v3_fees.rs
src/: arbitrage_finder.rs  best_route_finder.rs  bindings.rs  cache.rs  config.rs  executor.rs  fetch_pairs.rs  ipc_event_listener (Copy).txt  ipc_event_listener.rs  ipc_feed.rs  main.rs  mempool_decoder.rs  price_tracker (Copy).txt  price_tracker.rs  revm_sim.rs  route_cache.rs  simulate_swap_path.rs  split_route_path.rs  token_graph.rs  token_index.rs  token_tax.rs  tx_decoder.rs  utils.rs  v3_math.rs
