[package]
name = "arb-rust-bot"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15"
ethers = { version = "2", features = ["ws", "abigen"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.37", features = ["full", "rt"] }
rayon = "1.10"
futures = "0.3"
dashmap = "5.5"
mimalloc = { version = "0.1", features = ["secure"] }
libc = "0.2"
hex = "0.4"
chrono = "0.4"
num_cpus = "1.16"
primitive-types = "0.12"
smallvec = "1.11"

