[package]
name = "arb-rust-bot"
version = "0.1.0"
edition = "2024"


[dependencies]
dotenvy = "0.15"
tokio = { version = "1.37", features = ["full", "rt"] }
mimalloc = { version = "0.1", features = ["secure"] }
libc = "0.2"
chrono = "0.4"
num_cpus = "1.16"
primitive-types = "0.12"
smallvec = "1.11"
dotenv = "0.15"
tokio-stream = "0.1.17"
eyre = "0.6.12"
serde_json = "1.0.140"
dashmap = "5.5.3"
futures = "0.3.31"
revm = { version = "27.0", features = ["alloydb"] }
revm-precompile = { git = "https://github.com/bluealloy/revm", branch = "main", package = "revm-precompile", default-features = false }
ethers = { version = "2.0.14", default-features = false, features = ["ws", "rustls", "abigen", "ipc"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
hex = "0.4"
alloy-provider = "1.0.22"
alloy-eips = "1.0.22"
rayon = "1.10.0"
once_cell = "1.21.3"
alloy-primitives = "1.2.1"
num-bigint = "0.4.6"
num-traits = "0.2.19"

[[bin]]
name = "filter_liquid_pairs_accurate"
path = "scripts/filter_liquid_pairs_accurate.rs"
